Separate CSS File

--- a/seo-extension.html
+++ b/seo-extension.html
@@ -2,11 +2,7 @@
 <html>
 <head>
   <title>SEO Audit</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 10px; width: 300px; }
-    button { padding: 8px 12px; width: 100%; margin-top: 5px; }
-    #results { margin-top: 10px; font-size: 14px; }
-  </style>
+  <link rel="stylesheet" href="seo-style.css">
 </head>
 <body>
   <h3>SEO Audit</h3>
