--- a/seo-extension.html
+++ b/seo-extension.html
@@ -5,9 +5,13 @@
   <link rel="stylesheet" href="seo-style.css">
 </head>
 <body>
-  <h3>SEO Audit</h3>
-  <button id="scanBtn">Scan Current Website</button>
-  <div id="results"></div>
+  <div class="header-box">
+    <h3>SEO Audit</h3>
+    <button id="scanBtn">Scan Current Page</button>
+  </div>
+
+  <div id="results" class="result-container"></div>
+
   <script src="seo-popup.js"></script>
 </body>
 </html>
