Google Page Speed

--- a/seo-extension.html
+++ b/seo-extension.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>SEO Audit</title>
-  <link rel="stylesheet" href="seo-style.css">
+  <link rel="stylesheet" href="css/seo-style.css">
+  <link rel="stylesheet" href="css/seo-speed.css">
 </head>
 <body>
   <div class="header-box">
     <h3>SEO Audit</h3>
     <button id="scanBtn">Scan Current Page</button>
   </div>
-
   <div id="results" class="result-container"></div>
-
-  <script src="seo-popup.js"></script>
+  <div id="speed-results" class="speed-result-container"></div>
+  <script src="js/seo-popup.js"></script>
+  <script src="js/seo-speed.js"></script>
 </body>
 </html>
