--- a/seo-extension.html
+++ b/seo-extension.html
@@ -5,6 +5,7 @@
   <title>SEO Audit</title>
   <link rel="stylesheet" href="css/seo-style.css" />
   <link rel="stylesheet" href="css/seo-speed.css" />
+  <link rel="stylesheet" href="css/seo-leads.css" />
 
 </head>
 <body>
@@ -14,6 +15,7 @@
     <div class="navbar">
       <button class="navlink active" data-target="overview">SEO On-Page</button>
       <button class="navlink" data-target="speed">Website Speed</button>
+      <button class="navlink" data-target="leads">Captured Leads</button>
     </div>
   </div>
 
@@ -22,12 +24,18 @@
     <div id="seo-results" class="result-container"></div>
   </div>
 
-   <div id="speed" class="navcontent">
+  <div id="speed" class="navcontent">
     <div id="speed-results" class="speed-result-container"></div>
   </div>
 
+  <div id="leads" class="navcontent">
+    <div id="leads-results" class="leads-result-container"></div>
+  </div>
+
+  <script src="js/navbar-tab.js"></script>
   <script src="js/seo-popup.js"></script>
   <script src="js/seo-speed.js"></script>
-  <script src="js/navbar-tab.js"></script>
+  <script src="js/seo-leads.js"></script>
+  
 </body>
 </html>
