Fix extn errors

--- a/seo-extension.html
+++ b/seo-extension.html
@@ -32,6 +32,7 @@
     <div id="leads-results" class="leads-result-container"></div>
   </div>
 
+  <script src="config.js"></script>
   <script src="js/navbar-tab.js"></script>
   <script src="js/seo-popup.js"></script>
   <script src="js/seo-speed.js"></script>
