--- a/seo-extension.html
+++ b/seo-extension.html
@@ -15,7 +15,7 @@
     <div class="navbar">
       <button class="navlink active" data-target="overview">SEO On-Page</button>
       <button class="navlink" data-target="speed">Website Speed</button>
-      <button class="navlink" data-target="leads">Captured Leads</button>
+      <button class="navlink" data-target="leads">Website Details</button>
     </div>
   </div>
 
