--- a/seo-extension.html
+++ b/seo-extension.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/seo-style.css" />
   <link rel="stylesheet" href="css/seo-speed.css" />
   <link rel="stylesheet" href="css/seo-leads.css" />
-
+  
 </head>
 <body>
   <div class="header-box">
@@ -16,6 +16,7 @@
       <button class="navlink active" data-target="overview">SEO On-Page</button>
       <button class="navlink" data-target="speed">Website Speed</button>
       <button class="navlink" data-target="leads">Website Details</button>
+      <button id="downloadPdfBtn">Download Overview</button>
     </div>
   </div>
 
@@ -32,10 +33,13 @@
     <div id="leads-results" class="leads-result-container"></div>
   </div>
 
+  <script src="libs/html2pdf.bundle.min.js"></script>
+  <script src="js/download-pdf.js"></script>
   <script src="js/navbar-tab.js"></script>
   <script src="js/seo-popup.js"></script>
   <script src="js/seo-speed.js"></script>
   <script src="js/seo-leads.js"></script>
+  <script src="js/download-pdf.js"></script>
   
 </body>
 </html>
